hw_air_ml_flow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-model-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: iris-model-app
  template:
    metadata:
      labels:
        app: iris-model-app
    spec:
      containers:
      - name: iris-model-app
        image: alexeyk12/mlflow-airflow:latest
        ports:
        - containerPort: 5005
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
