hw_air_ml_flow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-model-app
spec:
  selector:
    app: iris-model-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5005
  type: LoadBalancer
