hw_air_ml_flow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: iris-model-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iris-model-app
                port:
                  number: 80
